<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rage.oregonbeerchallenge.BreweriesFragment">

    <TextView
        android:id="@+id/breweries_fragment_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oregon_breweries"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_light"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tried"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/primary_text_light"
        />
    <Button
        android:id="@+id/breweries_fragment_load_more_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/more_results"
        android:layout_alignParentBottom="true"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/breweries_fragment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/breweries_fragment_title_text"
        android:layout_above="@id/breweries_fragment_load_more_button"
        >

    </android.support.v7.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/breweries_fragment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.ProgressBar"
        />


</RelativeLayout>
